# crates

./: Cargo.toml  sort_derive.py
auth/: Cargo.toml
auth/src/: lib.rs  runtime.rs
auth/src/application/: auth_command.rs  auth_listener.rs  auth_port.rs  auth_projection.rs  auth_query.rs  auth_runtime.rs  command.rs  event.rs  event_bus.rs  listener.rs  mod.rs  port.rs  presenter.rs  projection.rs  query.rs  scalar.rs  signal.rs  test_runtime.rs  transaction.rs  view.rs
auth/src/clients/: auth_runtime.rs  axum.rs  mod.rs  runtime.rs
auth/src/clients/axum/: error.rs  handler.rs  jwt_guard.rs  listener.rs  middleware.rs  mod.rs  router.rs  runtime.rs
auth/src/clients/axum/api/: login.rs  register.rs
auth/src/clients/axum/api/linkedin/: callback.rs
auth/src/clients/wasm/: api.rs  linkedin.rs  mod.rs  runtime.rs
auth/src/domain/: auth_config.rs  auth_event.rs  auth_message.rs  auth_scalar.rs  auth_state.rs  error.rs  event.rs  message.rs  mod.rs  state.rs  story.rs
auth/src/domain/scalar/: email.rs  mod.rs  password.rs  password_hash.rs  user_id.rs
auth/src/old_clients/: axum.rs  mod.rs
auth/src/old_clients/axum/: listener.rs  mod.rs  router.rs
auth/src/old_clients/axum/api/: mod.rs
auth/src/old_clients/axum/api/linkedin/: mod.rs
auth/src/old_clients/wasm/: api.rs  common.rs  linkedin.rs  mod.rs  runtime.rs
auth/src/services/: jwt.rs  linkedin.rs  membus.rs  mod.rs  mongodb.rs  tokio.rs  tokiobus.rs  web_sys.rs
auth/src/services/linkedin/: mod.rs  service.rs
auth/src/services/linkedin/dto/: access_token_dto.rs  error_dto.rs  mod.rs  user_info_dto.rs
auth/src/services/mongodb/: auth_store.rs  event_dto.rs  event_store.rs  mod.rs  service.rs  user_dto.rs  user_repository.rs
forgen/: Cargo.toml
forgen-macros/src/: lib.rs
forgen/src/: framework.rs  lib.rs  traits.rs  unexpected_error.rs
framework/: Cargo.toml
framework/src/: lib.rs  runtime.rs  short_backtrace.rs  stream.rs  traits.rs  transaction_id.rs
lab/: Cargo.toml
lab/src/: effect.rs  function.rs  lib.rs  main.rs
