[package]
name = "forgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
auto-delegate = "0.1"
backtrace = "0.3"
forgen-macros = { path = "../forgen-macros" }
thiserror = "1"
tracing = "0.1"
